--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dev:jd": "npm run build:jd -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch",
     "prepare": "husky install",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "postinstall": "weapp-tw patch"
   },
   "browserslist": [
     "last 3 versions",
@@ -92,12 +93,15 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "postcss": "^8.4.18",
+    "postcss-rem-to-responsive-pixel": "^6.0.1",
     "prettier": "^3.2.4",
     "pretty-quick": "^4.0.0",
     "style-loader": "1.3.0",
     "stylelint": "^14.4.0",
+    "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.1.0",
+    "weapp-tailwindcss": "^3.2.1",
     "webpack": "^5.78.0"
   },
   "lint-staged": {
